--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-ui-bootstrap": "^2.5.0"
   },
   "devDependencies": {
+    "babel-loader": "^6.4.1",
     "html-loader": "^0.4.5",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
